adding in my sheets from google that im using in powerbi

--- a/notebooks/new_notebook.ipynb
+++ b/notebooks/new_notebook.ipynb
@@ -3304,7 +3304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "id": "81343205",
    "metadata": {},
    "outputs": [
@@ -3680,6 +3680,42 @@
     "# Model Evaluation\n",
     "y_pred = model.predict(X_test)\n",
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "d47db322",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Bet Amount: 7562671.699999999\n",
+      "Total Payouts: 5143829.98725\n",
+      "Total Commission: 756267.1699999999\n",
+      "Casino Net Profit: 3175108.882749999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate total bet amount\n",
+    "total_bet_amount = df_mock['Bet_Amount'].sum()\n",
+    "\n",
+    "# Calculate total payouts\n",
+    "total_payouts = df_mock['Payout'].sum()\n",
+    "\n",
+    "# Calculate total commission\n",
+    "total_commission = total_bet_amount * 0.10\n",
+    "\n",
+    "# Calculate casino net profit\n",
+    "casino_net_profit = total_bet_amount - total_payouts + total_commission\n",
+    "\n",
+    "print(f\"Total Bet Amount: {total_bet_amount}\")\n",
+    "print(f\"Total Payouts: {total_payouts}\")\n",
+    "print(f\"Total Commission: {total_commission}\")\n",
+    "print(f\"Casino Net Profit: {casino_net_profit}\")"
    ]
   }
  ],
